<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main"
        tools:context=".ui.auth.VerificationActivity"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:src="@drawable/groceries"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/get_your_groceries_with_nectar"
            android:layout_margin="25dp"
            android:textSize="26sp"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="#030303"
            />
        <!--     Phone Number Input with Flag -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            >
            <!-- Country Flag -->
            <ImageView
                android:id="@+id/country_flag"
                android:layout_width="33.97dp"
                android:layout_height="23.7dp"
                android:src="@drawable/flag"
                android:contentDescription="@string/country_flag"/>
            <TextView
                android:layout_width="42dp"
                android:layout_height="29dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@color/prefix_color_text"
                android:text="+880 "
                android:layout_marginLeft="10dp"
                />

            <!-- Phone Number Input Field -->
            <EditText
                android:id="@+id/mobile_edittext"
                android:layout_width="match_parent"
                android:layout_height="39.55dp"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:background="@drawable/custom_edittext_bg"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:background="#E2E2E2" />

        <!-- Divider Text for Social Media Login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bottomblurbackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or connect with social media"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>

        <!-- Google Login Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/google_background"
            >
            <ImageView
                android:layout_width="22.95dp"
                android:layout_height="24.06dp"
                android:src="@drawable/google"
                android:layout_marginRight="25dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:textColor="@color/social_auth_txt_color"
                android:textAlignment="center"
                android:fontFamily="@font/montserratregular"
                android:textSize="17sp"
                android:padding="10dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!-- Facebook Login Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/facebook_background"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="22.95dp"
                android:layout_height="24.06dp"
                android:src="@drawable/facebook"
                android:layout_marginRight="25dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/social_auth_txt_color"
                android:textAlignment="center"
                android:fontFamily="@font/montserratregular"
                android:textSize="17sp"
                android:padding="10dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>